# base_controller_node_ros_control

./: README.md
base_controller/: CMakeLists.txt  package.xml
base_controller/config/: base_controllers.yaml
base_controller/launch/: base_controller.launch~  base_controller_hotel.launch  base_controller_yi.launch  base_driver_hotel.launch  base_driver_yi.launch  ros_control.launch
base_controller/src/: base_controller.cpp  base_controller.hpp
fetch/fetch_description/robots/: freight.urdf
fetch/fetch_gazebo/: CMakeLists.txt
fetch/fetch_gazebo/launch/: freight.launch.xml  navigation.launch  playground.launch  simulation.launch  willow.launch
fetch/fetch_gazebo/robots/: freight.gazebo.xacro
fetch/fetch_navigation/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  move_base.yaml  move_base_traj.yaml
fetch/fetch_navigation/config/fetch/: move_base.yaml~
fetch/fetch_navigation/config/freight/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  move_base.yaml  move_base_origin.yaml
fetch/fetch_navigation/launch/: freight.launch  freight_web.launch
fetch/fetch_navigation/launch/include/: move_base.launch.xml
fetch/robot_controllers/robot_controllers/src/: .pid.cpp.swp
teleop_joy/: CMakeLists.txt  package.xml
teleop_joy/launch/: joystick_controller_xbox360.launch  joystick_driver0.launch  joystick_driver1.launch
teleop_joy/node/: joystick_controller (copy).py  joystick_controller.py  remap.py
