<?xml version="1.0"?>
<package>
  <name>teleop_joy</name>
  <version>0.0.0</version>
  <description>The teleop_joy package</description>
  <maintainer email="yonh_dee@todo.todo">yonh_dee</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
